--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,7 @@ buildscript {
     repositories {
         google()
         jcenter()
+//        mavenCentral()
         
     }
     dependencies {
@@ -14,12 +15,27 @@ buildscript {
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
+//    subprojects {
+//        project.configurations.all {
+//            resolutionStrategy.eachDependency { details ->
+//                if (details.requested.group == 'androidx.core'
+//                        && !details.requested.name.contains('androidx')) {
+//                    details.useVersion "1.0.1"
+//                }
+//                if (details.requested.group == 'androidx.appcompat'
+//                        && !details.requested.name.contains('androidx')) {
+//                    details.useVersion "1.0.1"
+//                }
+//            }
+//        }
+//    }
 }
 
 allprojects {
     repositories {
         google()
         jcenter()
+//        mavenCentral()
         
     }
 }
